fix: add copy dir

--- a/clients/Dockerfile
+++ b/clients/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY --from=core package.json yarn.lock* package-lock.json* pnpm-lock.yaml* .npmrc* ./
+COPY --from=core /tmp/source/clients/package.json /tmp/source/clients/pnpm-lock.yaml* ./
 RUN \
   if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
   elif [ -f package-lock.json ]; then npm ci; \
@@ -27,7 +27,7 @@ RUN \
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY --from=core . .
+COPY --from=core /tmp/source/clients/ .
 
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
