--- a/clients/Dockerfile
+++ b/clients/Dockerfile
@@ -4,7 +4,7 @@ FROM alpine:3.21 AS core
 RUN apk add --no-cache git
 RUN git clone https://github.com/polarsource/polar.git --depth=1 --branch=main /tmp/source/
 WORKDIR /tmp/source
-ADD ./standalone.diff
+ADD ./standalone.diff .
 RUN git apply standalone.diff
 
 FROM node:18-alpine AS base
