--- a/clients/Dockerfile
+++ b/clients/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add --no-cache git
 RUN git clone https://github.com/polarsource/polar.git --depth=1 --branch=main /tmp/source/
 WORKDIR /tmp/source
 ADD ./standalone.diff .
-RUN git apply standalone.diff
+RUN git apply --ignore-space-change --ignore-whitespace standalone.diff
 
 FROM node:18-alpine AS base
 
